# cmake-tut

./: .gitignore  CMakeLists.txt  README.md
docs/: cmake-tutorial.md
test/: test.c
